--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>Javascript</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <script src="index.js"></script>
     <div class="carGame">
       <div class="score"></div>
       <div class="startScreen">
