--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href=".\style.css"/>
 <html>
   <head>
     <title>Javascript</title>
-    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <div class="carGame">
@@ -16,6 +17,7 @@
       </div>
       <div class="gameArea"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js">      
+    </script>
   </body>
 </html>
